<resources>
    <string name="app_name">DRIVER.PH</string>

    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>\nLessons go here\nLessons go here\nLessons go
    here\nLessons go here\nLessons go here\nLessons go here
    <string name="option_3">Option 3</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="click_quiz_btn">If you are ready to take the quiz, click the button below.</string>
    <string name="take_the_quiz">Take the Quiz</string>
    <string name="pass">Pass the quiz and unlock the next lesson.</string>
    <string name="start_quiz">Start the test</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="unlock_next_module">Unlock next module</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="dot_link">dot_link</string>
    <string name="lto_link">lto_link</string>
    <string name="ltfrb_link">ltfrb_link</string>
    <string name="mmda_link">mmda_link</string>
    <string name="mmda">MMDA: Metropolitan Manila Development Authority</string>
    <string name="tesdaName">TESDA: Technical Education and Skills Development Authority</string>
    <string name="department_of_transportation">DoT: Department of Transportation</string>
    <string name="land_transportation_office">LTO: Land Transportation Office</string>
    <string name="ltfrb">LTFRB: Land Transportation Franchising and Regulatory Board</string>
    <string name="playback_nresponse">Playback\nResponse</string>
    <string name="back">Back</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="next_lesson">Next</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="allTestsDone">Congratulations! You have passed all the tests!</string>
    <string name="check_update">Connecting to update your scores...</string>
    <string name="cant_update">Check your internet connection.</string>
    <string name="time_remaining">Time left:</string>
    <string name="time_is_up">Time is up!</string>
    <string name="option_4">Option 4</string>

    <string name="app_email">driver.ph@gmail.com</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="obser"><b><u>OBSERVATION</u></b></string>
    <string name="rec">You need to undergo another\ntraining for the Basic\nCompetences to improve on the\nfollowing area/s:</string>
    <string name="tesda">TESDA DRIVING (Passenger\nBus/Straight Truck) NC III</string>
    <string name="alt311">ALT311204 Performance Job Estimate</string>
    <string name="tesda_link">tesda_link</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="current_date">Day, Month Date Year</string>
    <string name="evaluation_text">1. Observation \n2. Interviews\n3. Demonstration\n4. Case Studies\n5.Written Test\n6. Practical/\nPerformance Test</string>
    <string name="you_passed">You Passed!</string>
    <string name="you_failed">You Failed!</string>
    <string name="eval_points_interview">• Interviews</string>
    <string name="eval_points_demonstration">• Demonstration</string>
    <string name="eval_points_caseStudy">• Case Studies</string>
    <string name="eval_points_writtenTest">• Written Test</string>
    <string name="eval_points_practicalTest">• Practical/Performance Test</string>
    <string name="eval_points_observation">• Observation</string>
    <string name="see_details"><u>See Details</u></string>

    <string name="change_language">Change Language</string>

    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sodales, massa eget rutrum dignissim, ex nulla dapibus est, a pretium ligula nunc sit amet augue. Vivamus convallis libero ut ex volutpat, et imperdiet mi eleifend.</string>

    <string name="simulation_popup_title">Did you know?</string>

    <string name="vol">Volume</string>
    <string name="list_updated">Showing list of tests taken.</string>
    <string name="reload_this_page">Please connect to the internet to save your scores.\nOnce done, reload this page.</string>
    <string name="you_scored">YOU SCORED:</string>
    <string name="review">Review</string>
    <string name="retake">Retake</string>
    <string name="questions_go_here">Question goes here for this module. Please answer to the best of your ability.</string>
    <string name="read_questions">Read each question carefully. Choose the best answer and click NEXT once
        you are ready for the next question. You cannot go back to the previous question items to change your answers.</string>
    <string name="please_select_an_answer">Please select an answer.</string>
    <string name="comingSoon">"Coming soon!"</string>
    <string name="unlockedNextModule">Congratulations! You have unlocked the next module!</string>
    <string name="unlockedAllModules">Congratulations! You have completed all the tests and modules!</string>
    <string name="timeUp">Time is up! Test has been submitted.</string>
    <string name="click_refresh_list_to_proceed">Click Refresh list to proceed.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_quiz_is_not">Your quiz is not yet finished.<br></br>
        You will automatically get zero (0) as your score.<br></br>
        Do you wish to end this attempt?</string>
    <string name="oops">Oops!</string>
    <string name="synced">Sync successful!</string>
    <string name="sync_error_json">Response for sync failed!</string>
    <string name="sync_error">Sync failed!</string>
    <string name="saved">Test score has been saved!</string>
    <string name="connect_to_net_to_save">To save the test results, please connect to the internet.</string>
    <string name="check_net">Checking your internet connection...</string>
    <string name="updated">Updated scores successfully!</string>
    <string name="course_title">Course Title</string>
    <string name="prepForTest">We believe in second chances, too.
        Take a deep breath and take the test again.</string>
    <string name="letsGo">Retake the test</string>
    <string name="connect_to_net_to_view_summary">Oops! Please connect to the internet to view your score details.</string>
    <string name="questions_5">Questions: 10</string>
    <string name="time_limit">Time limit: 10 minutes</string>
    <string name="lessons_go_here">Lessons go here\nLessons go here\nLessons go here\nLessons go here\nLessons go here\nLessons go here\nLessons go here\nLessons go here</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="quick_recap">Quick Recap</string>
    <string name="hi_name">Hi, Name!</string>
    <string name="recap_msg">What have you learned from our lesson?\n\nPress the mic icon to START recording and tap the mic again to STOP recording.\nGive at least 1 keyword or 1 sentence about our lesson.</string>
    <string name="play_recorded">Play Recording</string>
    <string name="recording_status">Recording status</string>
    <string name="stop_rec_first_before_play">Please stop the recording first by pressing the mic icon again.</string>
    <string name="start_recording">Recording your answer…</string>
    <string name="play_recording">Playing recorded answer…</string>
    <string name="playback_ended">Thank you for that answer!</string>
    <string name="rec_stop">Done recording.\nPlay your answer!</string>
    <string name="code_no_1"><b>CODE NO.\t\tCORE COMPETENCIES</b></string>
    <string name="code"><b>CODE NO.\tCOMMON COMPETENCIES</b></string>
    <string name="code_no"><b>CODE NO.\t\tBASIC COMPETENCIES</b></string>
    <string name="textview_3">The DRIVING (Passenger Bus/Straight Truck) NC III    Qualification consists of competencies that a person must achieve to drive/operate buses/straight trucks classified under LTO Restriction codes 3 up to 5 on highways; transport passengers and/or heavy goods, liquids and materials over specified long or short distances; comply with local traffic rules/ regulations and ordinances and perform minor repairs on the assigned vehicle.
        \n\nThis Qualification is packaged from the competency map of the Automotive/Land Transport sector as shown in Annex A.
        \n\nThe Units of Competency comprising this Qualification include the following:</string>
    <string name="passenger_bus_driver_n_straight_truck_driver">•Passenger Bus Driver \n •Straight Truck Driver</string>
    <string name="confirm">Confirm</string>
    <string name="i_understand">I Understand</string>
    <string name="perEval">This shows how well or poor you have performed based on the scores and number of retries you made for each module.</string>
    <string name="keepLearning">Keep learning and become a more knowledgeable trucker!</string>
    <string name="noRecording">No recently recorded recitation.</string>
    <string name="exitedAndZero">You have exited the current test. Your score is 0 for this attempt.</string>
    <string name="about_text">In partnership with QuickTrans Cargo Moving, Inc., located in Tondo, Manila, the Technological Institute of the Philippines Quezon City - College of Information Technology and Education (TIPQC CITE) developed DRIVER.PH-TruckerLearningPH, a mobile learning application under the project: "Drivers Roadworthiness Improvement Verification Education Readiness for the Philippine Logistics Industry", that aims to educate and evaluate both professional and non-professional licensed vehicle drivers using categorized learning modules, videos, and tests that will enable them to be professionally competent and fully equipped with the essential knowledge of what a truck driver is expected to possess and apply in the trucking industry and on the road. The materials used in the application were derived from the Technical Education and Skills Development Authority (TESDA) competency standards and guidelines for TESDA NC III Driving (Passenger Bus/Straight Truck) certification. This mobile app is developed by a group of 4th Year Bachelor of Science in Information Technology (BSIT) students of TIPQC CITE.</string>
    <string name="correct">CORRECT!</string>
    <string name="incorrect">INCORRECT</string>
    <string name="got_it">GOT IT!</string>
    <string name="performance_evaluation">Performance\nEvaluation</string>
    <string name="practice_driving">Practice \nDriving</string>

</resources>