<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VoiceResponse">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/quickRecap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/quick_recap"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_19ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chapterVR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="Chapter"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/whatHaveYouLearned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="start"
            android:text="@string/recap_msg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/btn_start_record"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_playback"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:background="@drawable/custom_playback_btn"
                android:padding="5dp"
                android:text="@string/play_recorded"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/recording_status"
            android:textColor="#003397"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="Ice breaker, please!"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/yellow_button"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>