<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".Recommendation">

    <include layout="@layout/recommendation_toolbar"
        android:id="@+id/toolbar"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="156dp"
        android:layout_height="107dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/arrow"
        android:layout_marginRight="96dp" />

    <FrameLayout
        android:layout_width="269dp"
        android:layout_height="260dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginRight="7dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rec"
            android:textAlignment="center"
            android:textColor='#0805ff'
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="100dp"
            android:background="#ffe4cc"
            android:text="@string/obser"
            android:textAlignment="center"
            android:textColor='#0805ff'
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginTop="130dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recommended Training"
            android:textAlignment="center"
            android:textColor='#0805ff'
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/tesda"
            android:textAlignment="center"
            android:textColor='#0805ff'
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:text="@string/alt311"
            android:textAlignment="center"
            android:textColor='#0805ff'
            android:textStyle="bold"
            android:gravity="center_horizontal" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>